--- a/NYC_Taxi_Trip_Time_Prediction_SANJEEV_KUMAR_THAKUR.ipynb
+++ b/NYC_Taxi_Trip_Time_Prediction_SANJEEV_KUMAR_THAKUR.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NYC Taxi Trip Time Prediction - SANJEEV KUMAR THAKUR.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNVstlB1ZFdhZui6NsT6R9t",
+      "authorship_tag": "ABX9TyPJ3hSSpSrpPIvSpgCTVraA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,7 +126,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -136,13 +136,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U3zTg9yub9LZ",
-        "outputId": "f5df1ac6-7d13-478b-b356-11595a7ac6d4"
+        "outputId": "a0c81924-4b69-4cab-eb40-df4c469a02f1"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,9 +161,9 @@
       "source": [
         "#the raw data\n",
         "\n",
-        "raw_df = pd.read_csv('/content/drive/MyDrive/Copy of NYC Taxi Data.csv')"
+        "raw_df = pd.read_csv('/content/drive/MyDrive/NYC Taxi Trip Time Prediction - SANJEEV KUMAR THAKUR/NYC Taxi Data.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -172,21 +172,21 @@
         "id": "wnHNGDkVcRW_",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 353
+          "height": 357
         },
-        "outputId": "d7dd0835-42bf-44d7-b46e-8f10a96150f8"
+        "outputId": "3b784fc9-4e0d-4eb9-dc99-d1d38b24eda8"
       },
       "source": [
         "raw_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-0161597a-5717-4124-a997-7df266373c9c\">\n",
+              "  <div id=\"df-df0bd834-5907-4796-b36d-558b7a49b80a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -293,7 +293,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0161597a-5717-4124-a997-7df266373c9c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-df0bd834-5907-4796-b36d-558b7a49b80a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -344,12 +344,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0161597a-5717-4124-a997-7df266373c9c button.colab-df-convert');\n",
+              "          document.querySelector('#df-df0bd834-5907-4796-b36d-558b7a49b80a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0161597a-5717-4124-a997-7df266373c9c');\n",
+              "          const element = document.querySelector('#df-df0bd834-5907-4796-b36d-558b7a49b80a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -393,12 +393,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d58dd41-4007-4696-e9eb-ab42b6181ae8"
+        "outputId": "9873614b-0a81-4126-cdb7-de3ce86be388"
       },
       "source": [
         "raw_df.shape"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,12 +419,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b22fd9ea-94a7-4fcb-a032-7ede3707d73c"
+        "outputId": "31417121-0eac-4e04-b9ca-16e8d5940237"
       },
       "source": [
         "raw_df.info()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,21 +458,21 @@
         "id": "JsCezoT5cp8u",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 300
         },
-        "outputId": "273446af-de3b-42f2-afac-808db504615e"
+        "outputId": "bdb84dcc-86a7-4e95-d007-d248c6e58da9"
       },
       "source": [
         "raw_df.describe()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-7ce76ddc-ab03-45d5-9cf8-8dbe82bd0d79\">\n",
+              "  <div id=\"df-87e21526-5475-45dd-9ce4-4d62adf2b2d1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -585,7 +585,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7ce76ddc-ab03-45d5-9cf8-8dbe82bd0d79')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-87e21526-5475-45dd-9ce4-4d62adf2b2d1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -636,12 +636,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7ce76ddc-ab03-45d5-9cf8-8dbe82bd0d79 button.colab-df-convert');\n",
+              "          document.querySelector('#df-87e21526-5475-45dd-9ce4-4d62adf2b2d1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7ce76ddc-ab03-45d5-9cf8-8dbe82bd0d79');\n",
+              "          const element = document.querySelector('#df-87e21526-5475-45dd-9ce4-4d62adf2b2d1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -718,7 +718,7 @@
         "\n",
         "  return missing_values_table"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -727,21 +727,21 @@
         "id": "dIRy-WIJdZx7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 390
+          "height": 394
         },
-        "outputId": "86fd33fc-5e92-482e-ac61-25887b1515df"
+        "outputId": "9d3baeea-17d2-4896-c16c-632c4a450cc0"
       },
       "source": [
         "missing_values(raw_df)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-3e52c39d-79c3-4681-a25a-50477339aca1\">\n",
+              "  <div id=\"df-9dc94c2f-d120-40a2-a11a-76f5288c39f9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -824,7 +824,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3e52c39d-79c3-4681-a25a-50477339aca1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9dc94c2f-d120-40a2-a11a-76f5288c39f9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -875,12 +875,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3e52c39d-79c3-4681-a25a-50477339aca1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9dc94c2f-d120-40a2-a11a-76f5288c39f9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3e52c39d-79c3-4681-a25a-50477339aca1');\n",
+              "          const element = document.querySelector('#df-9dc94c2f-d120-40a2-a11a-76f5288c39f9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -937,14 +937,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e03d0dcf-2bd4-47c8-a19c-420de2d25c40"
+        "outputId": "adaa5d80-a8ac-402b-a3b4-3dc54dda8227"
       },
       "source": [
         "#checking for numeric features\n",
         "numeric_features = raw_df.describe().columns\n",
         "numeric_features"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -967,14 +967,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40ca1156-764a-4d9f-8729-f032021d77cc"
+        "outputId": "2f183934-0a7e-46d3-e5af-93645d2164c0"
       },
       "source": [
         "#checking for categorical features\n",
         "categorical_features = raw_df.describe(include=['object','category']).columns\n",
         "categorical_features"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1007,7 @@
       "source": [
         "df = raw_df.copy()"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1027,7 +1027,7 @@
       "source": [
         "df[[\"pickup_datetime\", \"dropoff_datetime\"]] = df[[\"pickup_datetime\", \"dropoff_datetime\"]].apply(pd.to_datetime)\n"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
